--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,132 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NicolNails</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <title>Manicure & Pedicure - Nicol Rodriguez Nails</title>
+    <meta name="theme-color" content="#cfb0be" />
+    <meta name="msapplication-TileColor" content="#cfb0be" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta
+      name="description"
+      content="Disfruta de servicios profesionales de manicura y pedicura con técnicas innovadoras y atención personalizada. Realza la belleza de tus manos y pies con productos de alta calidad."
+    />
+    <meta name="author" content="JA__RG | Arquitecto de Software" />
+    <link rel="profile" href="https://gmpg.org/xfn/11" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta
+      name="keywords"
+      content="manicura, pedicura, salón de uñas, nail art,
+    diseño de uñas, tratamiento de uñas, belleza, uñas, servicio de
+    uñas, nails"
+    />
+
+    <!-- //////////// -->
+    <meta property="og:locale" content="es-CO" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Manicure & Pedicure - Nicol Rodriguez Nails"
+    />
+    <meta
+      property="og:site_name"
+      content="Manicure & Pedicure - Nicol Rodriguez Nails"
+    />
+    <meta
+      property="og:description"
+      content="Disfruta de servicios profesionales de manicura y pedicura con técnicas innovadoras y atención personalizada. Realza la belleza de tus manos y pies con productos de alta calidad."
+    />
+    <meta property="og:url" content="https://nicolrodrignails.com/" />
+    <meta property="og:image" content="./assets/icons/logoNicolNails.webp" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- //////////// -->
+
+    <title>Manicure & Pedicure - Nicol Rodriguez Nails</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Manicure & Pedicure - Nicol Rodriguez Nails",
+        "alternateName": "Nicol Rodriguez Nails",
+        "url": "https://nicolrodrignails.com/"
+      }
+    </script>
+
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link
+      rel="apple-touch-icon"
+      type="image/x-icon"
+      href="./assets/icons/logoNicolNails.webp"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x82"
+      href="./assets/icons/logoNicolNails-76x82.jpg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x129"
+      href="./assets/icons/logoNicolNails-120x129.jpg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x164"
+      href="./assets/icons/logoNicolNails-152x164.jpg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x194"
+      href="./assets/icons/logoNicolNails-180x194.jpg"
+    />
+    <link
+      rel="icon"
+      href="./assets/icons/logoNicolNails.webp"
+      type="image/x-icon"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      type="image/x-icon"
+      href="./assets/icons/logoNicolNails.webp"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./assets/icons/logoNicolNails.webp"
+    />
+    <link
+      rel="icon"
+      href="./assets/icons/logoNicolNails.webp"
+      type="image/jpg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x17"
+      href="./assets/icons/logoNicolNails-16x17.jpg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x34"
+      href="./assets/icons/logoNicolNails-32x34.jpg"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x52"
+      href="./assets/icons/logoNicolNails-48x52.jpg"
+    />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="canonical" href="https://nicolrodrignails.com/" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
