Update modified files and add new assets

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       type="image/x-icon"
       href="./assets/icons/logoNicolNails.webp"
     />
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="76x82"
       href="./assets/icons/logoNicolNails-76x82.jpg"
@@ -82,7 +82,7 @@
       rel="apple-touch-icon"
       sizes="180x194"
       href="./assets/icons/logoNicolNails-180x194.jpg"
-    />
+    /> -->
     <link
       rel="icon"
       href="./assets/icons/logoNicolNails.webp"
@@ -101,9 +101,9 @@
     <link
       rel="icon"
       href="./assets/icons/logoNicolNails.webp"
-      type="image/jpg"
+      type="image/webp"
     />
-    <link
+    <!-- <link
       rel="icon"
       type="image/png"
       sizes="16x17"
@@ -120,7 +120,7 @@
       type="image/png"
       sizes="48x52"
       href="./assets/icons/logoNicolNails-48x52.jpg"
-    />
+    /> -->
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
