Update index.html and add logo icons

--- a/src/index.html
+++ b/src/index.html
@@ -3,128 +3,121 @@
   <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <title>Manicure & Pedicure - Nicol Rodriguez Nails</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#cfb0be" />
     <meta name="msapplication-TileColor" content="#cfb0be" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- SEO General -->
+    <title>Manicure & Pedicure Profesional | Nicol Rodriguez Nails</title>
     <meta
       name="description"
-      content="Disfruta de servicios profesionales de manicura y pedicura con técnicas innovadoras y atención personalizada. Realza la belleza de tus manos y pies con productos de alta calidad."
-    />
-    <meta name="author" content="JA__RG | Arquitecto de Software" />
-    <link rel="profile" href="https://gmpg.org/xfn/11" />
-    <meta
-      name="robots"
-      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+      content="Embellece tus manos y pies con nuestros servicios profesionales de manicura y pedicura. Calidad, innovación y atención personalizada en cada sesión."
     />
     <meta
       name="keywords"
-      content="manicura, pedicura, salón de uñas, nail art,
-    diseño de uñas, tratamiento de uñas, belleza, uñas, servicio de
-    uñas, nails"
+      content="manicura, pedicura, uñas, nail art, diseño de uñas, belleza, spa de uñas, tratamiento de uñas"
     />
+    <meta name="author" content="JA__RG | Arquitecto de Software" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://nicolrnails.netlify.app/" />
 
-    <!-- //////////// -->
-    <meta property="og:locale" content="es-CO" />
+    <!-- Open Graph para Facebook -->
+    <meta property="og:locale" content="es_CO" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Manicure & Pedicure - Nicol Rodriguez Nails"
-    />
-    <meta
-      property="og:site_name"
-      content="Manicure & Pedicure - Nicol Rodriguez Nails"
+      content="Manicure & Pedicure Profesional | Nicol Rodriguez Nails"
     />
     <meta
       property="og:description"
-      content="Disfruta de servicios profesionales de manicura y pedicura con técnicas innovadoras y atención personalizada. Realza la belleza de tus manos y pies con productos de alta calidad."
+      content="Embellece tus manos y pies con nuestros servicios de manicura y pedicura. Calidad, innovación y atención personalizada."
     />
-    <meta property="og:url" content="https://nicolrodrignails.com/" />
-    <meta property="og:image" content="./assets/icons/logoNicolNails.webp" />
+    <meta property="og:url" content="https://nicolrnails.netlify.app/" />
+    <meta
+      property="og:image"
+      content="https://nicolrnails.netlify.app/assets/icons/logoNicolNails.png"
+    />
+
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <!-- //////////// -->
+    <meta
+      name="twitter:title"
+      content="Manicure & Pedicure Profesional | Nicol Rodriguez Nails"
+    />
+    <meta
+      name="twitter:description"
+      content="Embellece tus manos y pies con nuestros servicios de manicura y pedicura. Calidad, innovación y atención personalizada."
+    />
+    <meta
+      name="twitter:image"
+      content="https://nicolrnails.netlify.app/assets/icons/logoNicolNails.png"
+    />
 
-    <title>Manicure & Pedicure - Nicol Rodriguez Nails</title>
-
+    <!-- Schema.org JSON-LD para SEO -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Manicure & Pedicure - Nicol Rodriguez Nails",
-        "alternateName": "Nicol Rodriguez Nails",
-        "url": "https://nicolrodrignails.com/"
+        "@type": "LocalBusiness",
+        "name": "Nicol Rodriguez Nails",
+        "image": "https://nicolrnails.netlify.app/assets/icons/logoNicolNails.png",
+        "url": "https://nicolrnails.netlify.app/",
+        "description": "Embellece tus manos y pies con nuestros servicios profesionales de manicura y pedicura.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Bloque 319 Apartamento 402 Cra. 1A #70a 152",
+          "addressLocality": "Cali, Valle del Cauca",
+          "addressCountry": "CO"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+573003762773",
+          "contactType": "customer service"
+        }
       }
     </script>
 
-    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <!-- Íconos -->
     <link
-      rel="apple-touch-icon"
-      type="image/x-icon"
-      href="./assets/icons/logoNicolNails.webp"
-    />
-    <!-- <link
-      rel="apple-touch-icon"
-      sizes="76x82"
-      href="./assets/icons/logoNicolNails-76x82.jpg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x129"
-      href="./assets/icons/logoNicolNails-120x129.jpg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x164"
-      href="./assets/icons/logoNicolNails-152x164.jpg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x194"
-      href="./assets/icons/logoNicolNails-180x194.jpg"
-    /> -->
-    <link
-      rel="icon"
-      href="./assets/icons/logoNicolNails.webp"
-      type="image/x-icon"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      type="image/x-icon"
-      href="./assets/icons/logoNicolNails.webp"
-    />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="./assets/icons/logoNicolNails.webp"
-    />
-    <link
-      rel="icon"
-      href="./assets/icons/logoNicolNails.webp"
-      type="image/webp"
-    />
-    <!-- <link
       rel="icon"
       type="image/png"
-      sizes="16x17"
-      href="./assets/icons/logoNicolNails-16x17.jpg"
+      sizes="16x16"
+      href="./assets/icons/logoNicolNails-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
-      sizes="32x34"
-      href="./assets/icons/logoNicolNails-32x34.jpg"
+      sizes="32x32"
+      href="./assets/icons/logoNicolNails-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
-      sizes="48x52"
-      href="./assets/icons/logoNicolNails-48x52.jpg"
-    /> -->
+      sizes="48x48"
+      href="./assets/icons/logoNicolNails-48x48.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/icons/logoNicolNails-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/icons/logoNicolNails-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/icons/logoNicolNails-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/icons/logoNicolNails-180x180.png"
+    />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <link rel="canonical" href="https://nicolrodrignails.com/" />
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   </head>
   <body>
     <app-root></app-root>
